[package]
name = "otel-tracing"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { version = "0.3.22" }
tracing.workspace = true
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
